fix color contrast

--- a/themes/digital.gov/src/scss/new/_community-info.scss
+++ b/themes/digital.gov/src/scss/new/_community-info.scss
@@ -41,12 +41,12 @@
       @include u-text('gray-1');
       @include u-text('no-underline');
       @include u-font('sans', 'md');
-      @include u-bg('gold-30v');
+      @include u-bg('orange-warm-50v');
       @include u-display('block');
       @include u-radius('md');
       @include u-text('bold');
       &:hover{
-        @include u-bg('gold-40v');
+        @include u-bg('orange-warm-60v');
       }
     }
     .join.type-google-group{
